# SelecGel

./: .gitignore  DEMO.md  README.md  requirements.txt  sl_helpers.py  sl_webui.py  st_charts.py  streamlit_app.py
app/: README.md  cli.py  pyproject.toml  requirements-cheminformatics.txt  requirements.txt
app/examples/: lab_measurements.csv  reservoir_example.json
app/tests/: test_demo.py
app/vodopritok/: __init__.py  cheminformatics.py  decision_tree.py  economics.py  environmental_impact.py  lab_program.py  models.py  opr_program.py  reports.py  scouting.py  synthesis_assessment.py
app/vodopritok/api/: routes.py
app/vodopritok/data/: monomers.json  patent_molecules.json  technologies.json
app/vodopritok/demo/: context_builder.py  golden.py  lab_data.py  risk_dashboard.py  session.py
app/vodopritok/export/: __init__.py  cover_letter.py  one_pager.py
app/vodopritok/pipeline/: __init__.py  descriptors.py  models.py  orchestrator.py  patent_library.py  qsar_deepchem.py  qspr_sklearn.py  qsprpred_report.py
app/vodopritok/selecgel/: __init__.py  config.py  digital_twin.py  feedback.py  service.py  supply_chain.py
app/vodopritok/web/: app.py  viz.py
app/vodopritok/web/static/: charts.js  economics.js  style.css
app/vodopritok/web/templates/: _environmental_effect.html  _lab_program_preview.html  _nav.html  _opex_preview.html  _opr_preview.html  _reservoir_form.html  _synthesis_preview.html  base.html  cheminformatics.html  digital_twin.html  feedback.html  home.html  lab_program.html  opex_plan.html  opr_program.html  pitch.html  pitch_print.html  (+4 more)
(+38 files in other folders)
