[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vodopritok-platform"
version = "1.0.0"
description = "ПО для проекта селективного ограничения водопритока (ОВП)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
vodopritok = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vodopritok*"]
